<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="Currency">
        <SwitchPreference
            app:icon="@drawable/ic_baseline_monetization_on_24"
            app:key="@string/enableCurrencyConversion"
            app:summary="Change Tumi default currency"
            app:title="Currency conversion" />

        <ListPreference
            app:defaultValue="@string/defaultCurrencyValue"
            app:dependency="@string/enableCurrencyConversion"
            app:entries="@array/currency_labels"
            app:entryValues="@array/currency_values"
            app:icon="@drawable/ic_baseline_money_24"
            app:key="@string/currencySelected"
            app:summary="Selected currency in Tumi: %s"
            app:title="Currency" />

        <ListPreference
            android:dialogTitle="Exchange Rate Provider"
            app:defaultValue="@string/interBankExchangeRateValue"
            app:entries="@array/exchange_rate_labels"
            app:entryValues="@array/exchange_rate_values"
            app:icon="@drawable/ic_baseline_address_24"
            app:key="@string/exchangeRate"
            app:summary="Exchange Rate Provider: %s"
            app:title="Rate Provider" />

        <Preference
            app:icon="@drawable/ic_baseline_category_24"
            app:key="@string/viewExchangeRates"
            app:summary="Set the rates provided by Tumi"
            app:title="View Exchange Rates" />

        <SwitchPreference
            app:dependency="@string/enableCurrencyConversion"
            app:icon="@drawable/ic_baseline_rate_24"
            app:key="@string/enableSelfRate"
            app:summary="Switch on to set exchange rates yourself"
            app:title="Enable Rate Editing" />

        <Preference
            app:dependency="@string/enableSelfRate"
            app:icon="@drawable/ic_baseline_track_changes_24"
            app:key="@string/setExchangeRates"
            app:summary="Edit according to your preferences"
            app:title="Set exchange rates" />

    </PreferenceCategory>

    <PreferenceCategory android:title="Account">

        <SwitchPreference
            app:defaultValue="unchecked"
            app:icon="@drawable/ic_baseline_public_24"
            app:key="@string/enablePublicBusiness"
            app:summary="Switch on to enable other users to find your business on the 'Explore Page'"
            app:title="Publicize Business" />

        <ListPreference
            app:defaultValue="@string/retailValue"
            app:dependency="@string/enablePublicBusiness"
            app:entries="@array/business_type_labels"
            app:entryValues="@array/business_type_values"
            app:icon="@drawable/ic_baseline_business_24"
            app:key="@string/businessTypeSelection"
            app:summary="Current Business Type: %s"
            app:title="Business Type" />

        <ListPreference
            app:defaultValue="@string/sundayValue"
            app:entries="@array/pref_week_end_date_labels"
            app:entryValues="@array/pref_week_end_date_values"
            app:icon="@drawable/ic_baseline_today_24"
            app:key="@string/weekEndDate"
            app:summary="Back up day: %s"
            app:title="Week End" />

        <Preference
            app:icon="@drawable/ic_baseline_delete_gray_24"
            app:key="@string/resetSavedData"
            app:title="Reset saved data" />
    </PreferenceCategory>

</PreferenceScreen>