<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/standard_10"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/explore_options"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/headerTextSize" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="@dimen/standard_5"
        android:background="@color/colorGray" />

    <TextView
        android:id="@+id/modalUser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/standard_5"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center_vertical"
        android:padding="@dimen/standard_20"
        android:text="@string/your_profile"
        android:textAlignment="gravity"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/normalTextSize"
        app:drawableStartCompat="@drawable/ic_baseline_person_24" />

    <TextView
        android:id="@+id/modalPublicRequests"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/standard_5"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center_vertical"
        android:padding="@dimen/standard_20"
        android:text="@string/requests"
        android:textAlignment="gravity"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/normalTextSize"
        app:drawableStartCompat="@drawable/ic_baseline_public_24" />

    <TextView
        android:id="@+id/modalServices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawablePadding="@dimen/standard_5"
        android:fontFamily="@font/montserrat_regular"
        android:gravity="center_vertical"
        android:padding="@dimen/standard_20"
        android:text="@string/services"
        android:textAlignment="gravity"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/normalTextSize"
        app:drawableStartCompat="@drawable/ic_baseline_service_24" />

</LinearLayout>