<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:cardBackgroundColor="@color/colorBackground"
        app:cardCornerRadius="20dp"
        app:cardElevation="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/appLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/appName"
                    android:textAllCaps="false"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/logoSizeTumi" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-24dp"
                    android:fontFamily="@font/montserrat_bold"
                    android:text="@string/appNameSubtext"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="@dimen/subtitleTumi" />

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/Header1CreateAccountError"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/homeAmounts" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/Header2CreateAccountError"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/headerTextSize" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:fontFamily="@font/montserrat_regular"
                android:text="@string/PossibleErrorsInfo"
                android:textAlignment="center"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/normalTextSize" />

            <Button
                android:id="@+id/sendEmailBtnAccountFailure"
                style="?attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="-15dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/montserrat_regular"
                android:text="Send email."
                android:textAllCaps="false"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</RelativeLayout>