<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarMessages"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbarStock"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGrayBackground"
            app:title="">

            <TextView
                style="@style/ToolbarTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_service"
                android:textColor="@color/colorPrimaryDark" />

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/standard_12"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/select_your_service"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="@dimen/headerTextSize" />

    <Spinner
        android:id="@+id/addServiceSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/standard_20"
        android:layout_marginEnd="@dimen/standard_20"
        android:layout_marginBottom="@dimen/standard_20"
        android:padding="@dimen/standard_5" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="@dimen/standard_10"
        android:layout_marginEnd="20dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/addServiceDescriptionEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:hint="@string/add_a_description"
            android:inputType="text"
            android:minHeight="@dimen/standard_120"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/normalTextSize" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/saveBusinessTwoInfoButton"
        style="@style/NormalTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_margin="20dp"
        android:background="@drawable/button_blue_primary"
        android:text="@string/button_string_confirm" />

</LinearLayout>